package main.controllers.modules.game;

public interface UserCoordinateController extends CoordinateController {

}
